<resources>
    <string name="app_name">Arture</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_configure">Configure</string>
    <string name="monitor">Monitor</string>
    <string name="configure">Configure</string>
    <string name="about">About</string>
    <string name="ph">pH</string>
    <string name="apply">Apply</string>
    <string name="textPPM">PPM</string>
    <string name="choosePlant">Choose plant</string>
    <string name="none">None</string>
    <string name="title_activity_monitor">Monitoring</string>
    <string name="textMonitor">Monitor</string>
    <string name="phUP">pH\nUp</string>
    <string name="phDown">pH\nDown</string>
    <string name="abmix">AB\nMix</string>
</resources>
