<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_monitor" tools:context=".MonitorActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/chartPh"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textPpm"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@+id/phDown"
        android:layout_toLeftOf="@+id/phDown"
        android:layout_marginRight="24dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/chartPpm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:layout_toStartOf="@+id/textView2"
        android:layout_alignRight="@+id/chartPh"
        android:layout_alignEnd="@+id/chartPh" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph"
        android:id="@+id/textPh"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_above="@+id/chartPh"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="140dp" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPPM"
        android:id="@+id/textPpm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/chartPpm"
        android:layout_marginLeft="140dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/bars"
        android:layout_alignTop="@+id/chartPh"
        android:layout_alignBottom="@+id/chartPpm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phUP"
        android:id="@+id/phUP"
        android:layout_below="@+id/textPh"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="textEnd" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phDown"
        android:id="@+id/phDown"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignBottom="@+id/chartPh"
        android:layout_marginBottom="24dp"
        android:textAlignment="textEnd" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abmix"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/chartPpm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Ini Gue" />

</RelativeLayout>
